# snbb_neuroflow

./: .gitignore  USAGE.md  neuroflow.yaml  pyproject.toml  sessions.csv
configs/: neuroflow.example.yaml
docker/: Dockerfile  docker-compose.yml
docs/: background-queue.md  voxelops-integration-plan.md  voxelops-testing-summary.md  voxelops-usage.md
docs/api/: voxelops-api.md
docs/plans/: background-runner-migration.md  phase1-summary.md  phase2-summary.md  phase3-summary.md  phase4-summary.md  phase5-summary.md  phase6-summary.md  phase7-summary.md
examples/: HOW_TO_PROCESS_DATA.md  HOW_TO_VIEW_LOGS.md  PHASE1_TESTING.md  phase1_testing.ipynb  test_phase1.py  view_logs.py
examples/voxelops/: 01_bids_conversion.py  02_qsiprep_pipeline.py  03_complete_workflow.py  README.md  voxelops_tutorial.ipynb
migrations/: 001_add_workflow_runs.py
neuroflow/: __init__.py  config.py  runner.py  state.py  tasks.py
neuroflow/adapters/: voxelops.py  voxelops_schemas.py
neuroflow/cli/: export.py  main.py  process.py  run.py  scan.py  status.py  validate.py  worker.py
neuroflow/core/: logging.py  state.py
neuroflow/discovery/: scanner.py  sheet_mapper.py  validator.py  watcher.py
neuroflow/models/: __init__.py  audit.py  base.py  pipeline_run.py  (+3 more)
neuroflow_specs/: 01_PROJECT_OVERVIEW.md  02_CONFIGURATION.md  03_DATABASE_SCHEMA.md  04_CLI_SPECIFICATION.md  05_CORE_COMPONENTS.md  06_IMPLEMENTATION_GUIDE.md  README.md
tests/: conftest.py  test_tasks.py
workflow_plan/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-WORKFLOW-SCHEDULER.md  03-PIPELINE-REGISTRY.md  04-STATE-MACHINE.md  05-CELERY-CONFIGURATION.md  06-LOGGING-MONITORING.md  07-ERROR-HANDLING.md  08-CLI-COMMANDS.md  09-TESTING.md  10-DEPLOYMENT.md
(+23 files in other folders)
