[project]
name = "neuroflow"
version = "0.2.0"
description = "Task orchestration for neuroimaging pipelines"
requires-python = ">=3.10"
dependencies = [
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "pydicom>=2.4",
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
    "gspread>=6.0",
    "google-auth>=2.20",
    "parcellate>=0.1.2",
    "huey>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
neuroflow = "neuroflow.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
